# wgui

./: Cargo.toml  README.md
examples/: dashboard.rs  demo.rs
src/: context.rs  element.rs  frontend.html  lib.rs  protocol.rs  server.rs  state.rs  window.rs
