[package]
name = "wgui"
version = "0.1.0"
edition = "2021"
description = "A lightweight immediate-mode debug GUI served over localhost"
repository = "https://github.com/AntonWagnerCau/wgui"
homepage = "https://github.com/AntonWagnerCau/wgui"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tiny_http = "0.12"
tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
